--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
@@ -14,7 +14,7 @@ Working with fast views</H1>
 <p CLASS="Head">If you have converted the Navigator to a fast view it will
 appear in the shortcut bar as shown below.&nbsp;</p>
 <blockquote>
-  <p CLASS="Head"><img align="texttop" border="0" src="../images/Image60_fast_view1.jpg"  alt="Show fast view" width="70" height="168"></p>
+  <p CLASS="Head"><img align="texttop" border="0" src="../images/Image60_fast_view1.jpg"  alt="Show fast view" width="42" height="162"></p>
 </blockquote>
   <p CLASS="Head">To work with a fast view proceed as follows.</p>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
@@ -42,7 +42,7 @@ appear in the shortcut bar as shown below.&nbsp;</p>
 <P CLASS="Para">
 Observe the Navigator view slides out from the shortcut bar.&nbsp; </P>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image61_nav_fast.jpg"  alt="Fast view" width="376" height="283"> </P>
+<img align="texttop" border="0" src="../images/Image61_nav_fast.jpg"  alt="Fast view" width="278" height="306"> </P>
 </TD>
 </TR>
 <TR>
@@ -93,13 +93,13 @@ file.&nbsp;&nbsp; </P>
 </ul>
 
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." ><br>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27" ><br>
 <a href="../concepts/concepts-5.htm">Views</a><br>
 <a href="../concepts/concepts-21.htm">Fast views</a><br>
 <a href="../concepts/concepts-4.htm">Perspectives</a>
 </p>
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" ><br>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27" ><br>
 <a href="tasks-9b.htm">Creating fast views</a><br>
 <a href="tasks-3.htm">Opening views</a><br>
 <a href="tasks-3e.htm">Docking views</a><br>
