--- a/bundles/org.eclipse.platform.doc.isv/samples/samples.html
+++ b/bundles/org.eclipse.platform.doc.isv/samples/samples.html
@@ -11,17 +11,50 @@
 <b>Examples - Installation</b></h1>
 
 <h3>
-1.0 Installation</h3>
-To install the examples, download the zip file containing the examples.&nbsp;
+1.0 Installation via the Update Manager</h3>
+
+<p>
+The Eclipse SDK examples are found on the Eclipse project update site at <a href="http://update.eclipse.org/updates">http://update.eclipse.org/updates</a>.
+To locate and install them into a product:</p>
+
+<ol>
+  <li>Open the main update manager by clicking <b>Help &gt; Software Updates &gt;
+    Update Manager</b>. This opens the Install/Update perspective.</li>
+  <li> In the Feature Updates view, select <b>New
+    &gt; Site Bookmark</b> from the context menu. In the New Site Bookmark dialog that opens, give the site
+    the name 
+    &quot;Eclipse.org&quot; and URL
+	&quot;http://update.eclipse.org/updates&quot;.</li>
+  <li>Expand the 
+    &quot;Eclipse.org&quot; item and select the feature named &quot;Eclipse SDK
+    Examples&quot; (or &quot;Eclipse SDK Examples (Windows)&quot; if you're on
+    Windows). Click the <b>Install</b> button
+    within the Preview view.</li>
+  <li>The Feature Install wizard confirms the details of the feature you are
+    about to install. Click <b>Next</b>.</li>
+  <li> Select the directory into which the example feature is to be installed and hit <b>Next</b>.</li>
+  <li> <p>Click <b>Install</b> to allow the downloading and installing
+    to proceed.</p></li>
+  <li> Click <b>Yes</b> when asked to exit and restart the workbench for the
+    changes to take effect. The examples are now installed in the workbench.</li>
+</ol>
+
+<h3>
+1.1 Manual Installation</h3>
+To install the examples without the Update Manager, download the appropriate Eclipse SDK Example zip file from the
+Eclipse project web site at <a href="http://www.eclipse.org/downloads">http://www.eclipse.org/downloads</a>.
 <p>
 The workbench should not be running while the examples are being&nbsp;
 installed.&nbsp; Extract the contents of the zip file to the root directory&nbsp;
-of your Eclipse installation.&nbsp;&nbsp;</p>
+of your Eclipse installation.&nbsp;</p>
 <p> For example, if you installed the Eclipse
-Project SDK on <b> d:\eclipse-sdk</b> then extract the contents of the examples
-zip file to <b>d:\eclipse-sdk</b>.&nbsp;&nbsp;&nbsp;</p>
-<p>Start the workbench.&nbsp;
-The example plug-ins should be installed.</p>
+Project SDK on <b> d:\eclipse-sdk\</b> then extract the contents of the examples
+zip file to <b>d:\eclipse-sdk\</b> (the
+subdirectories named <b>eclipse</b> should line up).</p>
+<p>Start the workbench.&nbsp;The workbench will report that updates have been
+detected; accept them. The examples are now installed in the workbench.</p>
+
+<p>&nbsp;
 <p><a href="hglegal.htm"><img SRC="ngibmcpy.gif" ALT="Copyright IBM Corp. and others 2000, 2002.  All Rights Reserved." BORDER=0 height=12 width=250></a>
 </body>
 </html>
