--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64a_another.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64a_another.htm
@@ -46,7 +46,7 @@ we will do the following:
 </TD>
 <TD valign="top" width="481" align="left">
 <P CLASS="Para">
-Changes that are in the repsository, which you have not yet updated to.</P>
+Changes that are in the repository, which you have not yet updated to.</P>
 </TD>
 </TR>
 <TR>
