--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
@@ -34,7 +34,7 @@ Once you are over the shortcut bar the cursor will change to a stack cursor.
 Release the mouse button to drop the Navigator onto the shortcut bar. </P>
 <P CLASS="Para">The shortcut bar now includes a button for the Navigator fast view </P>
 <blockquote>
-<P CLASS="Para"><img align="texttop" border="0" src="../images/Image60_fast_view1.jpg" alt="Fast view" width="70" height="168"></P>
+<P CLASS="Para"><img align="texttop" border="0" src="../images/Image60_fast_view1.jpg" alt="Fast view"></P>
 </blockquote>
   </li>
 </ol>
