Screenshot correction and switched to same win icon

--- a/bundles/org.eclipse.platform.doc.user/tasks/tfonts.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tfonts.htm
@@ -1,1 +1,52 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Setting help fonts and colors for accessibility</title></head><BODY BGCOLOR="#ffffff"><h1>Setting help fonts and colors for accessibility</h1><p>The help browser uses your operating system's settings for the font colors,styles, and sizes. Users with visual impairments may wish tochange some of these settings to increase the readability of the documentation.</p><p> <img border="0" src="../images/ngwin.gif" alt="The following information applies to Windows." width="51" height="13"> In addition, on Windows platforms using Microsoft Internet Explorer, the help browser uses a component of Internet Explorer to display documentation, so changes you make to its display settings also affect the help display. To change the help browser's font and color settings:</p><ol>  <li>Open Microsoft Internet Explorer.</li>  <li>Select <b>Tools &gt; Internet Options</b>.</li>  <li>On the <b>General</b> page, click the <b>Colors</b>, <b>Fonts</b>, or <b>Accessibility</b> button.</li>  <li>Set the formatting options you desire.</li>  <li>Optionally, you can specify a cascading style sheet (CSS) to apply to the content.</li>  <li>Click <b>OK</b> and exit Internet Explorer.</li>  <li>Restart the Workbench. Open the Help perspective and browse the documentation to see the changes.</li></ol><p><b>Note:</b> The help system also uses the Icon font setting on the Display Properties <b>Appearance</b> tab.</p><p>For more information about creating a CSS, consult a CSS reference. The W3 Consortium (www.w3.org) has an extensive collection of information about CSS and links to valuable resources.</p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" WIDTH="159" HEIGHT="27"><br><a href="taccess.htm">Accessing and navigating online help</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></body></html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<html>
+<head>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Setting help fonts and colors for accessibility</title>
+</head>
+
+<BODY BGCOLOR="#ffffff">
+<h1>Setting help fonts and colors for accessibility</h1>
+
+<p>The help browser uses your operating system's settings for the font colors,
+styles, and sizes. Users with visual impairments may wish to
+change some of these settings to increase the readability of the documentation.
+</p>
+
+<p> <img border="0" src="../images/win_only.gif" alt="The following information applies to Windows."> 
+In addition, on Windows platforms using Microsoft Internet Explorer, the help 
+browser uses a component of Internet Explorer to display documentation, so changes 
+you make to its display settings also affect the help display. To change the 
+help browser's font and color settings:
+</p>
+
+<ol>
+  <li>Open Microsoft Internet Explorer.</li>
+  <li>Select <b>Tools &gt; Internet Options</b>.</li>
+  <li>On the <b>General</b> page, click the <b>Colors</b>, <b>Fonts</b>, or <b>Accessibility</b> button.</li>
+  <li>Set the formatting options you desire.</li>
+  <li>Optionally, you can specify a cascading style sheet (CSS) to apply to the content.</li>
+  <li>Click <b>OK</b> and exit Internet Explorer.</li>
+  <li>Restart the Workbench. Open the Help perspective and browse the documentation to see the changes.</li>
+</ol>
+
+<p><b>Note:</b> The help system also uses the Icon font setting on the Display Properties <b>Appearance</b> tab.</p>
+
+<p>For more information about creating a CSS, consult a CSS reference. The W3 
+Consortium (www.w3.org) has an extensive collection of information about CSS 
+and links to valuable resources.
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" WIDTH="159" HEIGHT="27"><br>
+<a href="taccess.htm">Accessing and navigating online help</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
+
+</body>
+</html>
