corrected -configuration description

--- a/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
@@ -71,24 +71,16 @@ The general form of running the Eclipse executable is:</p>
       <TD width="2%">&nbsp;</TD>
     </tr>
     <tr> 
-      <TD width="33%"> 
-        <pre><b>-configuration</b> (<var>configurationFileURL</var> | 
-	  common | user.home | user.dir)</pre></TD>
+      <TD vAlign=top width="33%"> 
+        <pre><b>-configuration</b> <var>configurationFileURL</var></pre>
+        </TD>
       <TD width="65%">The location for the Eclipse Platform configuration file, 
-        expressed as a URL or special value. The configuration file determines 
+        expressed as a URL. The configuration file determines 
         the location of the Eclipse platform, the set of available plug-ins, and 
         the primary feature. Note that relative URLs are not allowed.  
         The configuration file is written to this location when the Eclipse platform is 
         installed or updated.
-        <p>The special values are used to locate the standard configuration file: 
-          <code>common</code> means look for <code>install/platform.cfg</code> 
-          relative to the location of the Eclipse Platform launcher (that is, <code>install</code> 
-          is a sibling of <code>startup.jar</code>); <code>user.home</code> 
-          means look for <code>eclipse/install/platform.cfg</code> 
-          as a child of the prevailing value of the Java <code>user.home</code> 
-          property; and <code>user.dir</code> means look for <code>eclipse/install/platform.cfg</code> 
-          as a child of the prevailing value of the Java <code>user.dir</code>
-          property.</p></TD>
+        </TD>
       <TD width="2%">2.0</TD>
     </tr>
     <tr> 
