--- a/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
@@ -10,12 +10,18 @@ UI.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 
 
-<p><a href="cclsspthv.htm">Java development tools (JDT)<br>
-Classpath variable</a></p>
+<p><a href="concepts-4.htm">Java builder</a>
+<a href="cclsspthv.htm"><br>
+Java development tools (JDT)<br>
+Classpath variable</a>
+</p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
 <p dir="Ltr">
 </p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
+
+<p dir="Ltr"><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-113.htm">Adding a JAR file to the build 
+  path</a><br><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-112.htm">Adding a library folder to the build path</a><br><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-106.htm">Building a Java program</a><br><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-108.htm">Building automatically</a><br><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-109.htm">Building manually</a><br><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-111.htm">Viewing and editing a project's build path</a><br><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-110.htm">Working with build paths</a></p>
+<p></p>
 
 
 <p><br>
