--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-108.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-108.htm
@@ -1,31 +1,26 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Building automatically</title>
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Building automatically</title></head>
+<body bgcolor="#ffffff">
+<h1 class="Head">
+Building automatically</h1>
+<p class="Head"> To turn automatic building on: </p>
+<blockquote>
+ Select <strong>Workbench &gt; Preferences &gt; Perform build automatically 
+    on resource modification</strong> check box.
+</blockquote>
+ 
+    To turn automatic building off: 
+    <br>
+  <blockquote>Unselect <strong>Workbench &gt; Preferences &gt; Perform build automatically 
+        on resource modification</strong> check box.
+    </blockquote>
+    <p class="Para">&nbsp; </p>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Building automatically</H1>
-<p CLASS="Head"> To turn automatic building on: </p>
-<ul>
-  <li> Select <strong>Workbench &gt; Preferences &gt; Perform build automatically 
-    on resource modification</strong> check box.</li>
-</ul>
-<ol>
-  <li> 
-    <p class="Head">To turn automatic building off: </p>
-    <ul>
-      <li>Unselect <strong>Workbench &gt; Preferences &gt; Perform build automatically 
-        on resource modification</strong> check box.</li>
-    </ul>
-    <P CLASS="Para">&nbsp; </P>
-  </li>
-  <li><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></li>
-</ol>
+  <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+
 
 
 
@@ -48,15 +43,15 @@ a project's build path</a><br>
 errors and warnings</a><br>
 <a href="../tasks/tasks-110.htm">Working with build 
 paths</a></p>
-<P><br>
+<p><br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
-
-</P>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 
+</p>
 
 
 
-</BODY>
-</HTML>
+
+
+</body></html>
