--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
@@ -19,6 +19,9 @@
     &gt; Java &gt; JUnit&gt; Show the JUnit results view only when an error or 
     failure occurrs</b> checkbox.</li>
 </ul>
-<p><img src="../ngibmcpy.gif"> </p>
+
+<p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</p>
+
 </BODY>
 </HTML>
