--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-5.htm
@@ -18,13 +18,10 @@ To search for methods with a certain return type:
   <li>Select <strong>Method</strong> and <strong>Declarations</strong></li>
   <li>Use a working set to make the search faster.</li>
   <li>Press <strong>Search</strong> <br>
-    <img src=" ../ngibmcpy.gif"> </li>
 </ol>
-<p></P>
 
-
-
-
+<p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</p>
 
 </BODY>
 </HTML>
