--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-6.htm
@@ -37,8 +37,9 @@
     &gt; Java &gt; Editor &gt; Code Assist &gt; Enable auto activation</b> checkbox.<br>
   </li>
 </ul>
-<P>&nbsp;<br>
-  <img src=" ../ngibmcpy.gif"> </P>
+
+<p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</p>
 
 </BODY>
 </HTML>
