--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
@@ -32,6 +32,9 @@
     Java &gt; Code Generation</b> is/are selected.<br>
   </li>
 </ul>
-<img src=" ../ngibmcpy.gif">
+
+<p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</p>
+
 </BODY>
 </HTML>
