--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-1.htm
@@ -9,8 +9,9 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head"> Tips &amp; Tricks</H1>
-<P>&nbsp;<br>
-  <img src="../ngibmcpy.gif"> </P>
+
+<p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</p>
 
 </BODY>
 </HTML>
