--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -70,6 +70,9 @@
     menu bar or pop-up menu.<br>
   </li>
 </ul>
-<p><img src="../ngibmcpy.gif"> </p>
+
+<p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</p>
+
 </BODY>
 </HTML>
