--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
@@ -19,5 +19,9 @@
     of the Type Hierarchy view by using the Menu toolbar button.<br>
     <img src=" ../ngibmcpy.gif"> </li>
 </ul>
+
+<p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</p>
+
 </BODY>
 </HTML>
