--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-9.htm
@@ -29,7 +29,9 @@
     </ul>
   </li>
 </ul>
-<p></P>
-<img src=" ../ngibmcpy.gif">
+
+<p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</p>
+
 </BODY>
 </HTML>
