--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-109.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-109.htm
@@ -56,7 +56,7 @@ a project's build path</a><br>
 paths</a><br>
 &nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12"> </p>
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> </p>
 
 
 
