--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-11.htm
@@ -41,7 +41,7 @@ path variable</a><br>
 projects</a></p>
 <P>&nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
