--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-146.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-146.htm
@@ -45,7 +45,7 @@ The breakpoint is disabled until either it is re-enabled or its hit count is cha
 <p><a href="../reference/ref-35.htm">Breakpoints view</a></p>
 <P>&nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
