--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
@@ -102,7 +102,7 @@ Change</SPAN></b>
 
 <P><br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
