--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-120.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-120.htm
@@ -50,7 +50,7 @@ paths</a><br>
 
 <P>&nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
