--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-121.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-121.htm
@@ -87,7 +87,7 @@ definition</a><br>
 definition</A></p>
 <P><br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
