--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-124.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-124.htm
@@ -41,7 +41,7 @@ paths</a><br>
 <a href="../tasks/tasks-119.htm">Working with JREs</a></p>
 <P><br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
