--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-126.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-126.htm
@@ -38,7 +38,7 @@ Running and debugging</H1>
 <a href="../reference/ref-12.htm">Console preferences</a></p>
 <P>&nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
