--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-133.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-133.htm
@@ -34,7 +34,7 @@ debugging</a></p>
 <a href="../reference/ref-4.htm">Run and debug actions</a></p>
 <P>&nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
