--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-134.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-134.htm
@@ -44,7 +44,7 @@ the execution of a program</a></p>
 <a href="../reference/ref-74.htm">Variables view</a></p>
 <P>&nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
