--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-136.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-136.htm
@@ -73,7 +73,7 @@ arguments</a><br>
 <p><a href="../reference/ref-51.htm">Debug view</a></p>
 <P><br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
