--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-137.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-137.htm
@@ -14,7 +14,7 @@ Inspecting values</H1>
 When a thread suspends, the top stack frame of the thread is automatically selected. When a stack frame is selected, the visible variables in that stack frame are displayed in the Variables view. Variables can be examined by expanding those variables that have children.</P>
 <P>&nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
