--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-145.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-145.htm
@@ -60,7 +60,7 @@ Remove</SPAN></b> from its pop-up menu in the Breakpoints view</LI>
 <a href="../reference/ref-view-outline.htm">Outline view for Java</a></p>
 <P>&nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
