--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-69.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-69.htm
@@ -20,7 +20,7 @@ information</a><br>
 <a href="../tasks/tasks-70.htm">Viewing marker help</a></p>
 <P><br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
