--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
@@ -55,7 +55,7 @@ debugging</a></p>
 <a href="../reference/ref-4.htm">Run and debug actions</a><br>
 &nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12"> </p>
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> </p>
 
 
 
