fixed related tasks

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
@@ -3,10 +3,10 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-</head>
+<title>Creating a new Java project</title></head>
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
-  <h1>Organizing Java projects</h1>
+  <h1>Creating a new Java project</h1>
   <p class=para>You can organize Java projects in two different ways. </p>
   <ul type=disc>
     <li class=MsoNormal style='     '>Use the project as the container of packages. 
@@ -32,10 +32,11 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
     container</a><br>
     <a href="../tasks/tasks-14.htm">Creating a Java project with source folders</a><br>
     <a href="../tasks/tasks-17.htm">Creating a new Java class</a><br>
-    <a href="../tasks/tasks-26.htm">Creating a new source folder</a><br>
-    <a href="../tasks/tasks-11.htm">Creating Java elements</a></p>
+    <a href="../tasks/tasks-21.htm">Creating a new Java interface</a>
+  <a href="../tasks/tasks-26.htm">Creating a new source folder</a><br>
+    <a href="../tasks/tasks-11.htm">Creating Java elements</a>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
+    <img border=0 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
