--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-13.htm
@@ -68,21 +68,15 @@ Finish</SPAN></b>
 </ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-3.htm">Java projects</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="../tasks/tasks-14.htm">Creating a Java 
-project with source folders</a><br>
-<a href="../tasks/tasks-15.htm">Creating a new Java 
-package</a><br>
-<a href="../tasks/tasks-17.htm">Creating a new Java 
-class</a><br>
-<a href="../tasks/tasks-25.htm">Creating a new interface in a 
-compilation unit</a><br>
-<a href="../tasks/tasks-149.htm">Creating a 
-Java scrapbook page</a><br>
-<a href="../tasks/tasks-11.htm">Creating Java 
-elements</a><br>
-<a href="../tasks/tasks-12.htm">Organizing Java 
-projects</a></p>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
+<p><a href="../tasks/tasks-11.htm">Creating Java elements</a><br>
+  <a href="../tasks/tasks-12.htm">Creating a new Java project</a><br>
+<a href="../tasks/tasks-14.htm">Creating a Java project with source folders</a><br>
+  <a href="../tasks/tasks-15.htm">Creating a new Java package</a><br>
+  <a href="../tasks/tasks-17.htm">Creating a new Java class</a><br>
+  <a href="../tasks/tasks-25.htm">Creating a new interface in a compilation unit</a><br>
+  <a href="../tasks/tasks-149.htm">Creating a Java scrapbook page</a><br>
+</p>
 
 
 
