--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-11.htm
@@ -16,29 +16,18 @@ Creating Java elements</H1>
 <a href="../concepts/concepts-3.htm">Java projects</a><br>
 <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p>
-<a href="../tasks/tasks-114.htm">Adding a variable 
-class path entry</a><br>
-<a href="../tasks/tasks-85.htm">Copying and moving 
-Java elements</a><br>
-<a href="../tasks/tasks-13.htm">Creating a Java project as its own source 
-container</a><br>
-<a href="../tasks/tasks-14.htm">Creating a Java 
-project with source folders</a><br>
-<a href="../tasks/tasks-15.htm">Creating a new Java 
-package</a><br>
-<a href="../tasks/tasks-17.htm">Creating a new Java 
-class</a><br>
-<a href="../tasks/tasks-25.htm">Creating a new interface in a 
-compilation unit</a><br>
-<a href="../tasks/tasks-149.htm">Creating a 
-Java scrapbook page</a><br>
-<a href="../tasks/tasks-26.htm">Creating a new 
-source folder</a><br>
-<a href="../tasks/tasks-117.htm">Defining a class 
-path variable</a><br>
-<a href="../tasks/tasks-12.htm">Organizing Java 
-projects</a></p>
+<p> <a href="../tasks/tasks-114.htm">Adding a variable class path entry</a><br>
+  <a href="../tasks/tasks-85.htm">Copying and moving Java elements</a><br>
+  <a href="../tasks/tasks-13.htm">Creating a Java project as its own source container</a><br>
+  <a href="../tasks/tasks-14.htm">Creating a Java project with source folders</a><br>
+  <a href="../tasks/tasks-26.htm">Creating a new source folder</a><br>
+  <a href="../tasks/tasks-117.htm"></a><a href="../tasks/tasks-15.htm">Creating 
+  a new Java package</a><br>
+  <a href="../tasks/tasks-17.htm">Creating a new Java class</a>
+  <a href="../tasks/tasks-21.htm">Creating a new Java interface</a><br>
+  <a href="../tasks/tasks-149.htm">Creating a Java scrapbook page</a><br>
+  <a href="../tasks/tasks-117.htm">Defining a class path variable</a><br>
+  <a href="../tasks/tasks-12.htm">Organizing Java projects</a>
 <P>&nbsp;<br>
 
 &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
