--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-17.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-17.htm
@@ -44,16 +44,14 @@ alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-3.htm">Java projects</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="../images/ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="tasks-18.htm">Creating a standalone class</a><br>
+  <p><a href="tasks-11.htm">Creating Java elements</a><br>
+    <a href="tasks-12.htm">Creating a new Java project</a><br>
+    <a href="tasks-94.htm"></a><a href="tasks-18.htm">Creating a top-level class</a><br>
     <a href="tasks-19.htm">Creating a nested class</a><br>
-    <a href="tasks-20.htm">Creating a class in an existing compilation 
-    unit</a><br>
-    <a href="tasks-11.htm">Creating Java elements</a><br>
-    <a href="tasks-12.htm">Organizing Java projects</a><br>
-    <a href="tasks-94.htm">Renaming a class, field, or interface</a><br>
+    <a href="tasks-20.htm">Creating a class in an existing compilation unit</a><br>
     <a href="tasks-129.htm">Setting execution arguments</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
+    <img border=0 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
