--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-18.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-18.htm
@@ -73,12 +73,9 @@ alt="Related concepts" border=0></p>
 src="../images/ngrelt.gif" alt="Related tasks"></p>
   <p><a href="tasks-17.htm">Creating a new Java class</a><br>
     <a href="tasks-19.htm">Creating a nested class</a><br>
-    <a href="tasks-20.htm">Creating a class in an existing compilation 
-    unit</a><br>
-    <a href="tasks-94.htm">Renaming a class, field, or interface</a><br>
-    &nbsp;</p>
-  <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
-</div>
+    <a href="tasks-20.htm">Creating a class in an existing compilation unit</a><br>
+    <br>
+    <img border=0 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
+  </div>
 </body>
 </html>
