--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-19.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-19.htm
@@ -66,12 +66,10 @@ alt="Related concepts" border=0></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="../images/ngrelt.gif" alt="Related tasks"></p>
   <p><a href="tasks-17.htm">Creating a new Java class</a><br>
-    <a href="tasks-18.htm">Creating a standalone class</a><br>
-    <a href="tasks-20.htm">Creating a class in an existing compilation 
-    unit</a><br>
-    <a href="tasks-94.htm">Renaming a class, field, or interface</a></p>
-  <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
-</div>
+    <a href="tasks-18.htm">Creating a top-level class</a><br>
+    <a href="tasks-20.htm">Creating a class in an existing compilation unit</a><br>
+    <br>
+    <img border=0 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
+  </div>
 </body>
 </html>
