--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-20.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-20.htm
@@ -23,9 +23,8 @@ alt="Related concepts" border=0></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="../images/ngrelt.gif" alt="Related tasks"></p>
   <p><a href="tasks-17.htm">Creating a new Java class</a><br>
-    <a href="tasks-18.htm">Creating a standalone class</a><br>
+    <a href="tasks-18.htm">Creating a top-level class</a><br>
     <a href="tasks-19.htm">Creating a nested class</a><br>
-    <a href="tasks-57.htm">Generating accessors</a><br>
     <a href="tasks-94.htm">Renaming a class, field, or interface</a><br>
     <a href="tasks-92.htm">Renaming a compilation unit</a><br>
     <a href="tasks-129.htm">Setting execution arguments</a></p>
@@ -33,7 +32,7 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
 src="../images/ngrelr.gif" alt="Related reference"></p>
   <p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
+    <img border=0 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
