--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-23.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-23.htm
@@ -43,13 +43,13 @@ alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-3.htm">Java projects</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="../images/ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="tasks-22.htm">Opening the New Interface wizard</a><br>
-    <a href="tasks-24.htm">Creating a nested interface</a><br>
+  <p><a href="tasks-21.htm">Creating a new Java interface</a><br>
+  <a href="tasks-24.htm">Creating a nested interface</a><br>
     <a href="tasks-25.htm">Creating a new interface in a compilation 
     unit</a><br>
-    <a href="tasks-94.htm">Renaming a class, field, or interface</a>&nbsp;</p>
+    <a href="tasks-94.htm">Renaming a class or interface</a>&nbsp;</p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
+    <img border=0 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
