--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
@@ -30,20 +30,17 @@ alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-3.htm">Java projects</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="../images/ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="tasks-14.htm">Creating a Java project with source folders</a><br>
-    <a href="tasks-13.htm">Creating a Java project as its own source 
-    container</a><br>
+  <p><a href="tasks-11.htm">Creating Java elements</a><br>
+	<a href="tasks-12.htm">Creating a new Java project</a><br>
+    <a href="tasks-15.htm">Creating a new Java package</a><br>
+    <a href="tasks-13.htm">Creating a Java project as its own source container</a><br>
     <a href="tasks-14.htm">Creating a Java project with source folders</a><br>
-    <a href="tasks-25.htm">Creating a new interface in a compilation 
-    unit</a><br>
-    <a href="tasks-149.htm">Creating a Java scrapbook page</a><br>
-    <a href="tasks-11.htm">Creating Java elements</a><br>
-    <a href="tasks-12.htm">Organizing Java projects</a></p>
+  </p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="../images/ngrelr.gif" alt="Related reference"></p>
   <p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
+    <img border=0 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
