fixed related tasks

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-32.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-32.htm
@@ -12,11 +12,12 @@
 Creating JAR Files</H1>
 <P CLASS="Para">
 You can create and regenerate JAR files in the workbench.</P>
-<P>&nbsp;<br>
-
-<img src = ../ngibmcpy.gif width="195" height="12">
-
-</P>
+<P>&nbsp;</P>
+<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></P>
+<P> <a href="tasks-33.htm">Creating a new JAR file</a><br>
+  <a href="tasks-36.htm">Regenerating a JAR file</a><br>
+  <br>
+  <img src = ../ngibmcpy.gif border=0> </P>
 
 
 
