--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
@@ -66,7 +66,8 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
 src="../images/ngrelr.gif" alt="Related reference"></p>
   <p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
+    <img border=0 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
+ 
