--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-34.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-34.htm
@@ -43,7 +43,7 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
     <a href="tasks-36a.htm">Creating a JAR description</a><br>
     &nbsp;</p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
+    <img border=0 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
