--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-35.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-35.htm
@@ -75,7 +75,7 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
     <a href="tasks-36b.htm">Editing a JAR description</a><br>
     <a href="tasks-34.htm">Setting advanced options</a></p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
+    <img border=0 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
