added use of 'expand selection to'

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
 <html>
   <head>
     <title>Editing Java elements</title>
-    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1"
-      type="text/css" />
+    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
   </head>
@@ -595,6 +593,17 @@ while (Test.class.isAssignableFrom(superClass)) {
     }
     superClass= superClass.getSuperclass();
 }</pre>
+
+        <p class="Para">
+          Select the code range by using the 'Expand Selection to' feature:
+        </p>
+        
+        <ol>
+          <li>Navigate to the constructor <code>TestSuite(Class)</code>.</li>
+          <li>Set the cursor just before 'while'.</li>
+          <li>Press <kbd>Alt</kbd>+<kbd>Shift</kbd>+<kbd>Arrow Up</kbd>.</li>
+          <li>Press <kbd>Alt</kbd>+<kbd>Shift</kbd>+<kbd>Arrow Left</kbd> twice.</li>          
+        </ol>
       </li>
 
       <li>
@@ -737,6 +746,8 @@ while (Test.class.isAssignableFrom(superClass)) {
           alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
       </a>
     </div>
+
 </div>
+
   </body>
 </html>
