--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-37.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-37.htm
@@ -11,14 +11,17 @@
 <H1 CLASS="Head">
 Using the Hierarchy view</H1>
 <P>&nbsp;<br>
-
-<img src = ../ngibmcpy.gif width="195" height="12">
-
+  <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"> 
 </P>
-
-
-
-
-
+<P><a href="tasks-38.htm">Changing the appearance of the Hierarchy view</a></P>
+<P><a href="tasks-39.htm">Opening a type hierarchy on a Java elemen</a></P>
+<P><a href="tasks-40.htm">Opening a type hierarchy on the current text selection</a></P>
+<P><a href="tasks-42.htm">Opening a type hierarchy in its own perspective</a></P>
+<P><a href="tasks-43.htm">Overriding a method using the Hierarchy view</a></P>
+<P><a href="tasks-44.htm">Finding overridden methods </a></P>
+<P><img border=0 width=159 height=27 id="_x0000_i1027"
+src="../images/ngrelr.gif" alt="Related reference"></P>
+<p><a href="../reference/ref-24.htm">Views and editors</a></p>
+<P><img src = ../ngibmcpy.gif border=0> </P>
 </BODY>
 </HTML>
