--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
@@ -42,18 +42,21 @@ works only for classes and interfaces).</li>
 <p><br><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
-<p><a href="tasks-7.htm">Changing new type hierarchy defaults</a>
-<br><a href="tasks-11.htm">Creating Java elements</a>
-<br><a href="tasks-39.htm">Opening a type hierarchy on a Java
-element</a>
-<br><a href="tasks-40.htm">Opening a type hierarchy on the current
-text selection</a>
-<br><a href="tasks-41.htm">Opening a type hierarchy in the workbench</a>
-<br><a href="tasks-42.htm">Opening a type hierarchy in its own
-perspective</a>
-
-<br>&nbsp;
-<p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1027" height=12 width=195></div>
+  <p><a href="tasks-7.htm">Changing new type hierarchy defaults</a> <br>
+    <a href="tasks-11.htm">Creating Java elements</a> <br>
+    <a href="tasks-37.htm">Using the Hierarchy view</a><br>
+    <a href="tasks-39.htm">Opening a type hierarchy on a Java element</a> <br>
+    <a href="tasks-40.htm">Opening a type hierarchy on the current text selection</a> 
+    <br>
+    <a href="tasks-41.htm">Opening a type hierarchy in the workbench</a> <br>
+    <a href="tasks-42.htm">Opening a type hierarchy in its own perspective</a> 
+    <br>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="../images/ngrelr.gif" alt="Related reference">
+  <p><a href="../reference/ref-24.htm">Views and editors</a></p>
+  <p></p>
+  <p>&nbsp; 
+  <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1027"></div>
 
 </body>
 </html>
