--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-42.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-42.htm
@@ -25,13 +25,14 @@ alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-5.htm">Java perspectives</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="../images/ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="tasks-7.htm">Changing new type hierarchy defaults</a><br>
+  <p><a href="tasks-37.htm">Using the Hierarchy view</a><br>
+  <a href="tasks-7.htm">Changing new type hierarchy defaults</a><br>
     <a href="tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
     <a href="tasks-40.htm">Opening a type hierarchy on the current text 
     selection</a><br>
     <a href="tasks-41.htm">Opening a type hierarchy in the workbench</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
+    <img border=0 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
