--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-44.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-44.htm
@@ -28,20 +28,18 @@ class=label><b>Lock View and Show Members in Hierarchy</b></span> button is togg
   <p class="para"><b>Note:</b> The selection might not show all members if a filter 
     (such as <b>Hide Fields</b> or <b>Hide Static Members</b>) is active. <br>
     &nbsp; <br>
-    &nbsp; 
   <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1026" height=27 width=159> 
   <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a> 
   <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1027" height=27 width=159> 
-  <p><a href="tasks-47.htm">Filtering elements</a> <br>
-    <a href="tasks-73.htm">Opening an editor for a selected element</a> 
-    <br>
+  <p><a href="tasks-37.htm">Using the Hierarchy view</a><br>
+  <a href="tasks-47.htm">Filtering elements</a> <br>
+    <a href="tasks-73.htm">Opening an editor for a selected element</a> <br>
     <a href="tasks-39.htm">Opening a type hierarchy on a Java element</a> <br>
     <a href="tasks-43.htm">Overriding a method</a> <br>
-    &nbsp; 
   <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1028" height=27 width=159> 
   <p><a href="../reference/ref-dialog-override-method.htm">Override methods</a> <br>
     &nbsp; 
-  <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1029" height=12 width=195> 
+  <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1029" > 
 </div>
 </body>
 </html>
