--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
@@ -29,7 +29,8 @@ alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="../images/ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="tasks-87.htm">Extracting a method</a><br>
+  <p><a href="tasks-37.htm">Using the Hierarchy view</a><br>
+  <a href="tasks-87.htm">Extracting a method</a><br>
     <a href="tasks-44.htm">Finding overridden methods</a><br>
     <a href="tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
     <a href="tasks-96.htm">Renaming a method</a></p>
@@ -37,7 +38,7 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
 src="../images/ngrelr.gif" alt="Related reference"><br>
     <a href="../reference/ref-dialog-override-method.htm">Override methods</a></p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
+    <img border=0 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
