Type Hierarchy view -> Hierarchy view

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
@@ -17,7 +17,7 @@
     are shown in the tree. You can open and browse the contents of both internal 
     and external JAR files.</p>
   <h2>Hierarchy view</h2>
-  <p class="para">The Type Hierarchy view offers three different ways to look 
+  <p class="para">The Hierarchy view offers three different ways to look 
     at a type hierarchy:</p>
   <ul type="Disc">
     <li class="MsoNormal" style="color: black; "><b><span style="font-size: 10pt; font-family: Arial; ">Show 
