--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-192.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-192.htm
@@ -10,7 +10,7 @@
 <body bgcolor="#ffffff">
 <h1 class="Head">Showing and hiding override indicators</h1>
 <p>&nbsp;</p>
-<p>Outline and Type Hierarchy views can show special icons (<i>override indicators</i>) 
+<p>Outline and Hierarchy views can show special icons (<i>override indicators</i>) 
   to indicate members that override or implement other members from supertypes.</p>
 <p>To show the override indicators:</p>
 <ul>
