--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-38.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-38.htm
@@ -8,7 +8,7 @@
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
   <h1>Changing the appearance of the Hierarchy view</h1>
-  <p class=para>The Type Hierarchy view offers three different ways to look at 
+  <p class=para>The Hierarchy view offers three different ways to look at 
     a type hierarchy (use the toolbar buttons to alternate between them):</p>
   <ul type=disc>
     <li class=MsoNormal style='     '><span class=label><b>Show the Type Hierarchy</b></span> 
