--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-42.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-42.htm
@@ -8,7 +8,7 @@
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
   <h1>Opening a type hierarchy in its own perspective</h1>
-  <p class=para>The default behavior for opening a type hierarchy view is to replace 
+  <p class=para>The default behavior for opening the Hierarchy view is to replace 
     the Hierarchy view that is already open in the perspective, if one if already 
     open. If there is not already an open Hierarchy view, one is opened automatically. 
   </p>
