--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-7.htm
@@ -8,7 +8,7 @@
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
   <h1>Changing new type hierarchy defaults</h1>
-  <p class=para>New type hierarchies can open in a type Hierarchy view or in a 
+  <p class=para>New type hierarchies can open in a Hierarchy view or in a 
     Java Hierarchy perspective. You can indicate which is the default method for 
     opening new type hierarchies on the preferences pages.</p>
   <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
