--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
@@ -13,10 +13,10 @@
 <ul>
   <li>You can open the Type Hierarchy not only on types but also on packages, 
     source folders, JARs and Java projects.</li>
-  <li>You can drag and drop an element over the the Type Hierarchy view to focus 
+  <li>You can drag and drop an element over the the  Hierarchy view to focus 
     it on that element.</li>
   <li>You can change the orientation (from the default vertical to horizontal) 
-    of the Type Hierarchy view by using the Menu toolbar button.<br>
+    of the Hierarchy view by using the Menu toolbar button.<br>
     <img src=" ../ngibmcpy.gif"> </li>
 </ul>
 
